manifests/exercises/gke/dep-ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ping
          imagePullPolicy: IfNotPresent
          # image: ping:v5
          image: jpenna/k8s-mooc-ping:gke-v5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
