manifests/exercises/gke/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-svc
spec:
  type: NodePort
  selector:
    app: ping
  ports:
    - port: 2400
      protocol: TCP
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 2300
      protocol: TCP
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: exercises-ing
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-svc
            port:
              number: 2400
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2300
