manifests/exercises/gke/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: exercises-route
spec:
  parentRefs:
  - name: exercises-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: ping-svc
      port: 2400
  - matches:
    - path:
        type: PathPrefix
        value: /logs
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: log-output-svc
      port: 2300

---

apiVersion: v1
kind: Service
metadata:
  name: ping-svc
spec:
  type: ClusterIP
  selector:
    app: ping
  ports:
    - port: 2400
      protocol: TCP
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2300
      protocol: TCP
      targetPort: 3000
